name:                adventofcode2015
version:             0.1.0.0
homepage:            http://github.com/githubuser/simple#readme
license:             BSD3
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day1.Input
                       Day1.Solution
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable solutions
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode2015
  default-language:    Haskell2010
